add a radio button for gender.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
                 day of the week that you were born and depending on your gender it outputs 
                 your Akan name</thead></p>
         </div>
-        <input>
+        <form>
+            <input type="radio" name="gender" id="male">
+            <label for="male">Male</label>
+            <input type="radio" name="gender" id="female">
+            <label for="female">Female</label>
+        </form> 
     </div>
     
 </body>
