add style to '.date-picker'.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="main.css" rel="stylesheet" type="text/css"
 </head>
 <body>
     <div class="container">
@@ -17,16 +17,18 @@
                 your Akan name</thead></p>
         </div> 
         <div class="date-picker">
-            <div class="selected-date"></div>
+            <div class="selected-date">30 / 07 / 2019</div>
             <div class="dates">
                 <div class="month">
                     <div class="arrows previous-month">&lt;</div>
                     <div class="month"></div>
                     <div class="arrows next-month">&gt;</div>
                 </div>
+                <div class="days"></div>
             </div>
         </div>  
     </div>
+    <script src="main.js"></script>
     
 </body>
 </html>
