--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
             <div class="arrows next-month">&gt;</div>
         </div>
 
-        <div class="days"></div>
+        <div class="days">
+            <div class="day">1</div>
+            <div class="day">2</div>
+            <div class="day">3</div>
+            <div class="day">4</div>
+            <div class="day">5</div>
+            <div class="day">6</div>
+            <div class="day">7</div>
+        </div>
     </div>
 </div>  
 
