--- a/index.html
+++ b/index.html
@@ -19,20 +19,12 @@
 
     <div class="dates">
         <div class="month">
-            <div class="arrows previous-month">&lt;</div>
+            <div class="arrows previous-mth">&lt;</div>
             <div class="month">July 2019</div>
-            <div class="arrows next-month">&gt;</div>
+            <div class="arrows next-mth"></div>&gt;</div>
         </div>
 
-        <div class="days">
-            <div class="day">1</div>
-            <div class="day">2</div>
-            <div class="day">3</div>
-            <div class="day">4</div>
-            <div class="day">5</div>
-            <div class="day">6</div>
-            <div class="day">7</div>
-        </div>
+        <div class="days"></div>
     </div>
 </div>  
 
