--- a/tryinh/in.html
+++ b/tryinh/in.html
@@ -14,15 +14,15 @@
             <h1><strong>AKAN PROJECT</strong></h1>
             <p> This is a web application that uses your birthday date to calculate <thead>
                 day of the week that you were born and depending on your gender it outputs 
-                your Akan name</thead></p>
+                your Akan name.</p>
         </div> 
         <div class="date-picker">
             <div class="selected-date">30 / 07 / 2019</div>
             <div class="dates">
                 <div class="month">
-                    <div class="arrows previous-month">&lt;</div>
+                    <div class="arrows previous-mth">&lt;</div>
                     <div class="month">July 2019</div>
-                    <div class="arrows next-month">&gt;</div>
+                    <div class="arrows next-mth">&gt;</div>
                 </div>
                 <div class="days"></div>
             </div>
@@ -32,3 +32,4 @@
     
 </body>
 </html>
+
