add function goToNextMonth to js.

--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
     <div class="dates">
         <div class="month">
             <div class="arrows prev-mth">&lt;</div>
-            <div class="mth">July 2019</div>
+            <div class="mth"></div>
             <div class="arrows next-mth">&gt;</div>
         </div>
 
