add format date function to js.

--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
     your Akan name.</p>
 
 <div class="date-picker">
-    <div class="selected-date">30 / 7 / 2019</div>
+    <div class="selected-date"></div>
 
     <div class="dates">
         <div class="month">
