add a form to html file.

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <link href="main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<form>
 <h1><strong>AKAN PROJECT</strong></h1>
 <p>This is a web application that uses your birthday date to calculate the day of the week that you were born and depending on your gender it outputs 
     your Akan name.</p>
@@ -28,6 +28,6 @@
 </div>
         
 <script src="main.js"></script>
-    
+</form>    
 </body>
 </html>
