add table to the html file.

--- a/index2.html
+++ b/index2.html
@@ -9,25 +9,27 @@
 </head>
 <body>
 <form>
-<h1><strong>AKAN PROJECT</strong></h1>
-<p>This is a web application that uses your birthday date to calculate the day of the week that you were born and depending on your gender it outputs 
-    your Akan name.</p>
+    <table>
+        <h1><strong>AKAN PROJECT</strong></h1>
+        <p>This is a web application that uses your birthday date to calculate the day of the week that you were born and depending on your gender it outputs 
+            your Akan name.</p>
 
-<div class="date-picker">
-    <div class="selected-date"></div>
+        <div class="date-picker">
+            <div class="selected-date"></div>
 
-    <div class="dates">
-        <div class="month">
-            <div class="arrows prev-mth">&lt;</div>
-            <div class="mth"></div>
-            <div class="arrows next-mth">&gt;</div>
+            <div class="dates">
+                <div class="month">
+                    <div class="arrows prev-mth">&lt;</div>
+                    <div class="mth"></div>
+                    <div class="arrows next-mth">&gt;</div>
+                </div>
+
+                <div class="days"></div>
+            </div>
         </div>
-
-        <div class="days"></div>
-    </div>
-</div>
-        
-<script src="main.js"></script>
+                
+        <script src="main.js"></script>
+    </table>
 </form>    
 </body>
 </html>
