--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,21 @@
                 <div class="days"></div>
             </div>
         </div>
+        <tr>
+            <td>
+                Gender :
+            </td>
+            <td>
+                <input type="radio" name="gender">Male
+                <input type="radio" name="gender">Female
+            </td>
+        </tr><br>
+        <br>
+        <tr>
+            <td>
+                <input type="submit" name="submit" placeholder="Submit">Submit
+            </td>
+        </tr>
                 
         <script src="main.js"></script>
     </table>
