add checkGender function to js.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
          </div>
          <br>
          <form class="radio-button">
-            <input type="radio" class="gender labels" value="male">Male
-            <input type="radio" class="genders labels" value="female">Female
+            <input type="radio" class="gender labels" value="male" Id="ninos" name="boys">Male
+            <input type="radio" class="genders labels" value="female" id="ninas" name="girls">Female
         </form>
         <br>
         <a href="#result"><button type="button" name="button" class="btn btn-primary mb-2" onclick="checkDayOfWeek();">Calculate Birthday</button></a>
