--- a/index.html
+++ b/index.html
@@ -18,77 +18,78 @@
         </div>
         <div class="container-fluid">
         <h3>Filling out the form below will give you your Akan name so c'mon give it a try!</h3>
-
-        <div class="output">
-            <form onsubmit="event.preventDefault()">
-                <div class="form-group">
-                    <label for="year">Year</label>
-                    <input type="text"
-                    required
-                    id="year"
-                    max="2019"
-                    min="1950"
-                    placeholder="1995"
-                    max-length="4"
-                    min-length="4"
-                    class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="month">Month</label>
-                    <input type="text"
-                    placeholder="05"
-                    id="month"
-                    maxlength="2"
-                    min="1"
-                    max="12"
-                    min-length="1"
-                    required
-                    class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="day">Day</label>
-                    <input type="text"
-                    id="day"
-                    placeholder="14"
-                    min="1"
-                    max="31"
-                    min-length="1"
-                    max-length="2"
-                    required
-                     class="form-control">
-                </div>
-                <div class="form-group">
-                    <div>
-					<label for="radio" class="radio-inline">
-					<input
-					type="radio"
-					value="male"
-				    name="gender"
-					id="male"
-					required
-					/>
-					Male </label
-					><br />
-					<label for="radio" class="radio-inline">
-					<input
-					type="radio"
-					value="male"
-					name="gender"
-					id="female"
-					required
-					/>
-					Female
-					</label>
-				  </div>
-                  </div>
-            <button type="submit" onclick="getName()" onsubmit="event.preventDefault()" class="btn btn-outline-primary">submit</button>
-            <button type="Reset" onclick="getName()" onsubmit="event.preventDefault()" class="btn btn-outline-primary">Reset</button>
-           </form>
+        
+            <div class="output">
+                <form onsubmit="event.preventDefault()">
+                    <div class="form-group">
+                        <label for="year">Year</label>
+                        <input type="text"
+                        required
+                        id="year"
+                        max="2019"
+                        min="1950"
+                        placeholder="1995"
+                        max-length="4"
+                        min-length="4"
+                        class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="month">Month</label>
+                        <input type="text"
+                        placeholder="05"
+                        id="month"
+                        maxlength="2"
+                        min="1"
+                        max="12"
+                        min-length="1"
+                        required
+                        class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="day">Day</label>
+                        <input type="text"
+                        id="day"
+                        placeholder="14"
+                        min="1"
+                        max="31"
+                        min-length="1"
+                        max-length="2"
+                        required
+                        class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <div>
+					    <label for="radio" class="radio-inline">
+					    <input
+					    type="radio"
+					    value="male"
+				        name="gender"
+					    id="male"
+					    required
+					    />
+					    Male </label
+					    ><br />
+					    <label for="radio" class="radio-inline">
+					    <input
+					    type="radio"
+					    value="male"
+					    name="gender"
+					    id="female"
+					    required
+					    />
+					    Female
+					    </label>
+				    </div>
+                    </div>
+                <button type="submit" onclick="getName()" onsubmit="event.preventDefault()" class="btn btn-outline-primary">submit</button>
+                <button type="Reset" onclick="getName()" onsubmit="event.preventDefault()" class="btn btn-outline-primary">Reset</button>
+                </form>
+            </div>
         </div>
-        </div>
+        
     </div>
           <footer>
-            <div class="footer"></div>
+            <div class="footer">&copy; All rights reserved.</div>
           </footer>
 <script src="main.js"></script>
 </body>
