--- a/index.html
+++ b/index.html
@@ -23,61 +23,31 @@
                 <form onsubmit="event.preventDefault()">
                     <div class="form-group">
                         <label for="year">Year</label>
-                        <input type="text"
-                        required
-                        id="year"
-                        max="2019"
-                        min="1950"
-                        placeholder="1995"
-                        max-length="4"
-                        min-length="4"
+                        <input type="text" required id="year" max="2019"
+                        min="1950" placeholder="1995" max-length="4" min-length="4"
                         class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="month">Month</label>
-                        <input type="text"
-                        placeholder="05"
-                        id="month"
-                        maxlength="2"
-                        min="1"
-                        max="12"
-                        min-length="1"
-                        required
+                        <input type="text" placeholder="05" id="month" maxlength="2"
+                        min="1" max="12" min-length="1" required
                         class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="day">Day</label>
-                        <input type="text"
-                        id="day"
-                        placeholder="14"
-                        min="1"
-                        max="31"
-                        min-length="1"
-                        max-length="2"
-                        required
+                        <input type="text" id="day" placeholder="14" min="1" max="31"
+                        min-length="1" max-length="2" required
                         class="form-control">
                     </div>
                     <div class="form-group">
                         <div>
 					    <label for="radio" class="radio-inline">
-					    <input
-					    type="radio"
-					    value="male"
-				        name="gender"
-					    id="male"
-					    required
-					    />
-					    Male </label
+                        <input type="radio" value="male" name="gender" id="male" required
+                        />Male </label
 					    ><br />
 					    <label for="radio" class="radio-inline">
-					    <input
-					    type="radio"
-					    value="male"
-					    name="gender"
-					    id="female"
-					    required
-					    />
-					    Female
+					    <input type="radio" value="male" name="gender" id="female" required
+					    />Female
 					    </label>
 				    </div>
                     </div>
